--- a/starbuzz/index.html
+++ b/starbuzz/index.html
@@ -30,9 +30,9 @@
     <h2>Chai Tea, $1.85</h2>
     <p>A spicy drink made with black tea, spices, milk and honey.</p>
     <p>
-        <a href = "mission.html">Readoubt our Mission</a>.
+        <a href = "mission.html">Read about our Mission</a>.
         <br>
-        Read the <a href="http://wickedlysmart.com/buzz">Caffeine Buzz</a>.
+        Read the <a href="http://wickedlysmart.com/buzz" title = "Read all about caffeine on the Buzz">Caffeine Buzz</a>.
     </p>
 </body>
 
