--- a/starbuzz/mission.html
+++ b/starbuzz/mission.html
@@ -1,6 +1,6 @@
 <html>
         <head>
-                <title>Starbuzz Coffee Mission</title>
+                <title>Starbuzz Coffee;s Mission</title>
                 <style type = "text/css">
                 body{
                     background-color: #d2b48c;
