--- a/starbuzz/index.html
+++ b/starbuzz/index.html
@@ -7,7 +7,7 @@
   </head> 
 
   <body>
-    <header>
+    <header class = "top">
         <img id="headerLogo" src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">
         <img id="headerSlogan" src="images/headerSlogan.gif" alt="Providing all the...">
     </header>
