--- a/starbuzz/blog.html
+++ b/starbuzz/blog.html
@@ -57,7 +57,12 @@
 			Coffee is launching the Tweet Sip cup, a special Starbuzz Coffee cup that tweets each time you take a sip! Check
 			out my video of our new invention.
 		</p>
-		<video controls autoplay width="512" height="288" src="video/tweetsip.mp4"></video>
+		<video controls autoplay width="512" height="288">
+		<source src="video/tweetsip.mp4">
+		<source src="video/tweetsip.ogv">
+		<source src="video/tweetsip.webm">
+			<p>Sorry, your browser doesn't support the video element</p>
+		</video>
 	</articl>
 	<article>
 	<header>
